// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderMenu should not render icon 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="Items"
        >
          <button
            aria-label="Header menu Button Icon"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="ButtonIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        data-test-subj="Items"
      >
        <button
          aria-label="Header menu Button Icon"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
          data-test-subj="ButtonIcon"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="boxesHorizontal"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HeaderMenu should render button icon disabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="Items"
        >
          <button
            aria-label="Header menu Button Icon"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="ButtonIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-euiportal="true"
    >
      <div
        data-eui="EuiFocusTrap"
      >
        <div
          aria-describedby="generated-id"
          aria-live="off"
          aria-modal="true"
          class="euiPanel euiPanel--plain euiPanel--paddingSmall euiPopover__panel emotion-euiPanel-grow-m-s-plain-euiPopover__panel-light-hasTransform"
          data-popover-panel="true"
          role="dialog"
          style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
          tabindex="0"
        >
          <div
            class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
            data-popover-arrow="bottom"
            style="left: 10px; top: 0px;"
          />
          <p
            class="emotion-euiScreenReaderOnly"
            id="generated-id"
          >
            You are in a dialog. Press Escape, or tap/click outside the dialog to close.
          </p>
          <div>
            <div
              class="euiContextMenuPanel eui-scrollBar emotion-euiContextMenuPanel-Render"
              data-test-subj="MenuPanel"
              tabindex="-1"
            >
              <div>
                <button
                  class="euiContextMenuItem emotion-euiContextMenuItem-s-center"
                  data-test-subj="ActionItemedit"
                  type="button"
                >
                  <span
                    class="euiContextMenu__icon emotion-euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="pencil"
                  />
                  <span
                    class="euiContextMenuItem__text emotion-euiContextMenuItem__text-s"
                  >
                    Edit detection exception
                  </span>
                </button>
                <button
                  class="euiContextMenuItem emotion-euiContextMenuItem-s-center-disabled"
                  data-test-subj="ActionItemdelete"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiContextMenu__icon emotion-euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="trash"
                  />
                  <span
                    class="euiContextMenuItem__text emotion-euiContextMenuItem__text-s"
                  >
                    Delete detection exception
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        data-test-subj="Items"
      >
        <button
          aria-label="Header menu Button Icon"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
          data-test-subj="ButtonIcon"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="boxesHorizontal"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HeaderMenu should render button icon with default settings 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="Items"
        >
          <button
            aria-label="Header menu Button Icon"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="ButtonIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        data-test-subj="Items"
      >
        <button
          aria-label="Header menu Button Icon"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
          data-test-subj="ButtonIcon"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="boxesHorizontal"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HeaderMenu should render custom Actions 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="Items"
        >
          <button
            aria-label="Header menu Button Empty"
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
            data-test-subj="EmptyButton"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                color="inherit"
                data-euiicon-type="boxesHorizontal"
              />
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        data-test-subj="Items"
      >
        <button
          aria-label="Header menu Button Empty"
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
          data-test-subj="EmptyButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            />
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HeaderMenu should render empty button icon with actions and open the popover when clicked 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="Items"
        >
          <button
            aria-label="Header menu Button Empty"
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
            data-test-subj="EmptyButton"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              />
              <span
                color="inherit"
                data-euiicon-type="cheer"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        data-test-subj="Items"
      >
        <button
          aria-label="Header menu Button Empty"
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
          data-test-subj="EmptyButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            />
            <span
              color="inherit"
              data-euiicon-type="cheer"
            />
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HeaderMenu should render empty button icon with actions and should not open the popover when clicked if disableActions 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="Items"
        >
          <button
            aria-label="Header menu Button Empty"
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled"
            data-test-subj="EmptyButton"
            disabled=""
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              />
              <span
                color="inherit"
                data-euiicon-type="cheer"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        data-test-subj="Items"
      >
        <button
          aria-label="Header menu Button Empty"
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled"
          data-test-subj="EmptyButton"
          disabled=""
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            />
            <span
              color="inherit"
              data-euiicon-type="cheer"
            />
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HeaderMenu should render empty button icon with different icon settings 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="Items"
        >
          <button
            aria-label="Header menu Button Empty"
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
            data-test-subj="EmptyButton"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              />
              <span
                color="inherit"
                data-euiicon-type="cheer"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        data-test-subj="Items"
      >
        <button
          aria-label="Header menu Button Empty"
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
          data-test-subj="EmptyButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            />
            <span
              color="inherit"
              data-euiicon-type="cheer"
            />
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
